# project2-studypal-study-assistance

./: README.md  main.py  pyproject.toml
src/: env_template.txt  main.py  vectorize_book.py  vectorize_script.py
